# translategemma-finetune

./: .gitignore  README.md  debug.sh  justfile  pyproject.toml  train.sh  translategemma_template.jinja
notebook/: translate_gemma.ipynb
src/translategemma_finetune/: __init__.py  evaluate.py  finetune.py  languages.json  templates.py  update_languages.py
