[project]
name = "translategemma-finetune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MNIKIEMA", email = "nikiemamahamadi01@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "bitsandbytes>=0.48.0",
    "datasets>=4.3.0",
    "peft>=0.18.0",
    "python-dotenv>=1.2.2",
    "transformers~=5.5",
    "trl>=0.24.0",
    "wandb>=0.27.0",
]

[project.scripts]
translategemma-finetune = "translategemma_finetune:main"
translategemma-update-languages = "translategemma_finetune.update_languages:main"

[build-system]
requires = ["uv_build>=0.11.11,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint.isort]
known-first-party = ["mt_training"]

[tool.ruff.format]
# Use double quotes for strings.
quote-style = "double"

# Indent with spaces, rather than tabs.
indent-style = "space"

# Respect magic trailing commas.
skip-magic-trailing-comma = false

# Auto detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.mccabe]
max-complexity = 10
